module-check/src/test/clojure/clojure/core/typed/test/fail/unannotated_record.clj
(ns clojure.core.typed.test.fail.unannotated-record
  (:require [clojure.core.typed :as t]))

;Should throw a top level type error
(defrecord Unannotated [])
